--- a/AtrialFibrePlugin.ui
+++ b/AtrialFibrePlugin.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>416</width>
-    <height>269</height>
+    <height>351</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -105,6 +105,20 @@
        <widget class="QPushButton" name="epiEdit">
         <property name="text">
          <string>Edit Epi</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QPushButton" name="endoDiv">
+        <property name="text">
+         <string>Divide Endo</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="epiDiv">
+        <property name="text">
+         <string>Divide Epi</string>
         </property>
        </widget>
       </item>
