--- a/AtrialFibrePlugin.ui
+++ b/AtrialFibrePlugin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>416</width>
-    <height>435</height>
+    <width>466</width>
+    <height>694</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,9 +31,31 @@
      <property name="title">
       <string>Import</string>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Import atlas and original meshes through the &quot;Import&quot; menu. Use the below button for importing a two surface mesh.</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::PlainText</enum>
+        </property>
+        <property name="scaledContents">
+         <bool>false</bool>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
       <item>
        <widget class="QPushButton" name="importShellButton">
+        <property name="toolTip">
+         <string>Import a mesh defining two different surfaces, these will be loaded as two objects</string>
+        </property>
         <property name="text">
          <string>Import Endo/Epi Shell</string>
         </property>
@@ -63,6 +85,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>Identify the atlas mesh</string>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -73,7 +98,11 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QComboBox" name="origBox"/>
+       <widget class="QComboBox" name="origBox">
+        <property name="toolTip">
+         <string>Identify the original tet mesh to define fibres for</string>
+        </property>
+       </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label">
@@ -89,6 +118,9 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Identify the endocardial triangle surface mesh</string>
         </property>
        </widget>
       </item>
@@ -107,6 +139,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="toolTip">
+         <string>Identify the epicardial triangle surface mesh</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -120,6 +155,15 @@
      <layout class="QGridLayout" name="gridLayout">
       <item row="0" column="0">
        <widget class="QPushButton" name="endoReg">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Register the endo mesh to the atlas, this will produce a set of registered control points</string>
+        </property>
         <property name="text">
          <string>Register Endo</string>
         </property>
@@ -127,37 +171,163 @@
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="epiReg">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Register the epi mesh to the atlas, this will produce a set of registered control points</string>
+        </property>
         <property name="text">
          <string>Register Epi</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="endoEdit">
-        <property name="text">
-         <string>Edit Endo</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QPushButton" name="epiEdit">
-        <property name="text">
-         <string>Edit Epi</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
+      <item row="4" column="0">
        <widget class="QPushButton" name="endoDiv">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Divide the endo mesh into regions according to the control points</string>
+        </property>
         <property name="text">
          <string>Divide Endo</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="4" column="1">
        <widget class="QPushButton" name="epiDiv">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="toolTip">
+         <string>Divide the epi mesh into regions according to the control points</string>
+        </property>
         <property name="text">
          <string>Divide Epi</string>
         </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QGroupBox" name="verticalGroupBox">
+        <property name="title">
+         <string>Edit Endo</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <property name="bottomMargin">
+          <number>1</number>
+         </property>
+         <item>
+          <widget class="QPushButton" name="endoEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>Edit the endo mesh control points after initial registration</string>
+           </property>
+           <property name="text">
+            <string>Start</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QPushButton" name="endoDoneButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Done</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="endoCancelButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Cancel</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QGroupBox" name="verticalGroupBox_2">
+        <property name="title">
+         <string>Edit Epi</string>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_5">
+         <property name="bottomMargin">
+          <number>1</number>
+         </property>
+         <item>
+          <widget class="QPushButton" name="epiEdit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>Edit the epi mesh control points after initial registration</string>
+           </property>
+           <property name="text">
+            <string>Start</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="QPushButton" name="epiDoneButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Done</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="epiCancelButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Cancel</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
@@ -171,6 +341,9 @@
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QPushButton" name="genButton">
+        <property name="toolTip">
+         <string>Generate the final fibres field for the original tet mesh, assuming the endo and epi surface meshes have been divided into regions already</string>
+        </property>
         <property name="text">
          <string>Generate</string>
         </property>
