--- a/AtrialFibrePlugin.ui
+++ b/AtrialFibrePlugin.ui
@@ -93,7 +93,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Original</string>
+         <string>Tet Mesh</string>
         </property>
        </widget>
       </item>
